@@ -2,11 +2,22 @@ package fastvagas.service;
 
 import fastvagas.crawler.Crawler;
 import fastvagas.crawler.CrawlerFactory;
-import fastvagas.entity.*;
-import fastvagas.repository.*;
-import fastvagas.util.DateUtil;
+import fastvagas.entity.Job;
+import fastvagas.entity.Portal;
+import fastvagas.repository.JobRepository;
+import fastvagas.repository.PortalRepository;
 import fastvagas.util.PortalJobUtil;
 import fastvagas.util.StringUtil;
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
@@ -14,158 +25,128 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.io.IOException;
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
+/** This class contains all routines related to a crawler job. */
+@Setter
 @Slf4j
 @Service
+@NoArgsConstructor
 public class CrawlerService {
 
-    private final PortalRepository portalRepository;
-    private final PortalJobRepository portalJobRepository;
-    private final CityRepository cityRepository;
-    private final CrawlerLogRepository crawlerLogRepository;
-    private final MailService mailService;
+  private PortalRepository portalRepository;
+  private JobRepository jobRepository;
+  private MailService mailService;
 
-    @Autowired
-    public CrawlerService(PortalRepository portalRepository, PortalJobRepository portalJobRepository,
-                          CityRepository cityRepository, CrawlerLogRepository crawlerLogRepository,
-                          MailService mailService) {
-        this.portalRepository = portalRepository;
-        this.portalJobRepository = portalJobRepository;
-        this.cityRepository = cityRepository;
-        this.crawlerLogRepository = crawlerLogRepository;
-        this.mailService = mailService;
+  /**
+   * Creates an instance of CrawlerService.
+   *
+   * @param portalRepository {@link PortalRepository} instance
+   * @param jobRepository {@link JobRepository} instance
+   * @param mailService {@link MailService} instance
+   */
+  @Autowired
+  public CrawlerService(
+      PortalRepository portalRepository, JobRepository jobRepository, MailService mailService) {
+    this.portalRepository = portalRepository;
+    this.jobRepository = jobRepository;
+    this.mailService = mailService;
+  }
+
+  /** Starts the process of seeking for jobs. */
+  @Transactional()
+  public void start() {
+    List<Portal> portals = portalRepository.findAll();
+    if (portals.isEmpty()) {
+      log.info("Zero portals with active users. Leaving..");
+      return;
     }
 
-    @Transactional()
-    public void start() {
-        List<Portal> portals = portalRepository.findAll();
-        if (portals.isEmpty()) {
-            log.info("Zero portals with active users. Leaving..");
-            return;
-        }
+    StringBuilder logsToWrite = new StringBuilder();
+    LocalDateTime oneMonthPast = LocalDateTime.now().minusMonths(1L);
+    char cr = '\n';
 
-        Map<Long, City> cityCache = cityRepository.findAll().stream()
-                .collect(Collectors.toMap(City::getId, Function.identity()));
+    Set<Portal> portalSet = new HashSet<>(portalRepository.findAllByEnabled(Boolean.TRUE));
+    portalSet.forEach(
+        portal -> {
+          String template = "Starting crawler on %s - %s/%s.";
+          String message =
+              String.format(template, portal.getName(), portal.getCity(), portal.getState());
 
-        for (Portal portal : portals) {
-            int count = 0;
-            City city = cityCache.get(portal.getCityId());
-            if (city == null) {
-                log.warn("City id not mapped: {}", portal.getCityId());
-                continue;
-            }
+          log.info(message);
+          logsToWrite.append(template).append(cr);
 
-            String[] logsToSave = new String[7];
+          List<Job> jobList = findJobs(portal);
+          if (jobList.isEmpty()) {
+            message = "No new jobs found!";
+            log.info(message);
+            logsToWrite.append(message).append(cr);
+          } else {
+            message = jobList.size() + " new job(s) found on the portal.";
+            logsToWrite.append(message).append(cr);
 
-            logsToSave[count] = "Starting crawler for " + portal.getName() + " portal (city of " + city.getName() + ").";
-            log.info(logsToSave[count++]);
-
-            List<PortalJob> portalJobList = findJobs(portal, city);
-
-            if (portalJobList.isEmpty()) {
-                logsToSave[count] = "Zero jobs received from the portal. Going to next";
-                log.info(logsToSave[count]);
-
-                String[] smallCopy = new String[2];
-                Arrays.asList(logsToSave).subList(0, 2).toArray(smallCopy);
-                crawlerLogRepository.saveAll(fromStringArray(smallCopy, portal.getId()));
-                continue;
-            }
-
-            logsToSave[count] = portalJobList.size() + " job(s) received from the portal.";
-            log.info(logsToSave[count++]);
-
-            // Last 30 days jobs for this portal
-            logsToSave[count] = "Finding last 30 days jobs from this portal...";
-            log.info(logsToSave[count++]);
-            LocalDateTime oneMonthPast = LocalDateTime.now().minusMonths(1L);
-            List<PortalJob> savedList = portalJobRepository.findAllByPortalId(portal.getId())
-                    .stream()
+            // Last 30 days jobs for this portal - to compare to see if it's new
+            List<Job> savedList =
+                jobRepository.findAllByPortalId(portal.getId()).stream()
                     .filter(x -> x.getCreatedAt().isAfter(oneMonthPast))
-                    .collect(Collectors.toList());
+                    .toList();
 
-            Map<String, PortalJob> portalJobMap = PortalJobUtil.listToMapByUrl(savedList);
+            Map<String, Job> portalJobMap = PortalJobUtil.listToMapByUrl(savedList);
 
-            logsToSave[count] = portalJobMap.size() + " job(s) already saved at this portal.";
-            log.info(logsToSave[count++]);
+            message = portalJobMap.size() + " job(s) already saved at this portal.";
+            logsToWrite.append(message).append(cr);
 
-            List<PortalJob> portalJobToSave = new ArrayList<>();
+            List<Job> jobToSave = new ArrayList<>();
+            message = "Iterating over job list received, looking for new jobs...";
+            log.info(message);
+            logsToWrite.append(message).append(cr);
 
-            logsToSave[count] = "Iterating over job list received, looking for new jobs...";
-            log.info(logsToSave[count++]);
-            for (PortalJob portalJob : portalJobList) {
-                // Save the job, if it's not already saved
-                if (!portalJobMap.containsKey(portalJob.getJobUrl())) {
-                    portalJob.setPortalId(portal.getId());
-                    portalJobToSave.add(portalJob);
-                }
+            for (Job job : jobList) {
+              // Save the job, if it's not already saved
+              if (!portalJobMap.containsKey(job.getJobUrl())) {
+                job.setPortalId(portal.getId());
+                jobToSave.add(job);
+              }
             }
 
-            logsToSave[count] = portalJobToSave.size() + " new job(s) found. Registering...";
-            log.info(logsToSave[count++]);
-            portalJobRepository.saveAll(portalJobToSave);
+            message = jobToSave.size() + " new job(s) found. Registering...";
+            log.info(message);
+            logsToWrite.append(message).append(cr);
+            jobRepository.saveAll(jobToSave);
 
-            logsToSave[count] = "Done crowling for " + portal.getName() + " portal (city of " + city.getName() + ").";
-            log.info(logsToSave[count]);
+            message = "Done crowling for this portal!";
+            log.info(message);
+            logsToWrite.append(message).append(cr);
+          }
+        });
 
-            // saving log
-            List<CrawlerLog> crawlerLogs = fromStringArray(logsToSave, portal.getId());
-            crawlerLogRepository.saveAll(crawlerLogs);
-        }
-    }
+    mailService.sendLogsToAdmin(logsToWrite.toString());
+  }
 
-    public List<PortalJob> findJobs(Portal portal, City city) {
-        try {
-            Document doc = Jsoup
-                .connect(portal.getJobsUrl())
-                .ignoreHttpErrors(true)
-                .get();
+  /**
+   * Finds a list of jobs based on a Portal and a City.
+   *
+   * @param portal {@link Portal} to be used as search parameter
+   * @return A list of {@link Job} containing all jobs found or an empty list
+   */
+  public List<Job> findJobs(Portal portal) {
+    try {
+      Document doc = Jsoup.connect(portal.getSearchUrl()).ignoreHttpErrors(true).get();
 
-            String cityName = StringUtil.replaceToPlainText(city.getName().replace(" ", ""));
-            String portalName = StringUtil.replaceToPlainText(portal.getName().replace(" ", ""));
+      String cityName = StringUtil.replaceToPlainText(portal.getCity().replace(" ", ""));
+      String portalName = StringUtil.replaceToPlainText(portal.getName().replace(" ", ""));
 
-            Crawler crawler = CrawlerFactory.createInstance(cityName + portalName);
-            if (Objects.isNull(crawler)) {
-                return new ArrayList<>();
-            }
-
-            return crawler.findJobs(doc);
-        
-        } catch (IOException ioe) {
-            log.error("IOException: {}", ioe.getLocalizedMessage());
-        } catch (ClassCastException cce) {
-            log.error("ClassCastException: {}", cce.getLocalizedMessage());
-        }
-
+      Crawler crawler = CrawlerFactory.createInstance(cityName + portalName);
+      if (Objects.isNull(crawler)) {
         return new ArrayList<>();
+      }
+
+      return crawler.findJobs(doc);
+
+    } catch (IOException ioe) {
+      log.error("IOException: {}", ioe.getLocalizedMessage());
+    } catch (ClassCastException cce) {
+      log.error("ClassCastException: {}", cce.getLocalizedMessage());
     }
 
-    private Boolean check(String jobName, List<String> terms) {
-        for (String term : terms) {
-            if (jobName.toLowerCase().contains(term.toLowerCase())) {
-                return Boolean.TRUE;
-            }
-        }
-
-        return Boolean.FALSE;
-    }
-
-    private List<CrawlerLog> fromStringArray(String[] logs, Long portal_id) {
-        List<CrawlerLog> crawlerLogs = new ArrayList<>(logs.length);
-        for (String log : logs) {
-            CrawlerLog crawlerLog = CrawlerLog.builder()
-                    .createdAt(DateUtil.getCurrentLocalDateTime())
-                    .portalId(portal_id)
-                    .text(log)
-                    .build();
-            crawlerLogs.add(crawlerLog);
-        }
-
-        return crawlerLogs;
-    }
+    return new ArrayList<>();
+  }
 }
